--- a/FrontEnd/Emergency1.html
+++ b/FrontEnd/Emergency1.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="emergency-1">
-      <header class="headeremergency2" id="headerEmegency">
+      <header class="headeremergency2" id="headerEmergency">
         <section class="headerlogos3">
           <img
             class="asthmapp-logo-light-14"
@@ -43,7 +43,7 @@
             src="./public/add-phone1@2x.png"
           />
         </button>
-        <section class="emergencycontacts" id="emerencyContacts">
+        <section class="emergencycontacts" id="emergencyContacts">
           <button class="contact1btn" id="contact1Btn">
             <div class="ellipse-parent">
               <div class="call999-child"></div>
