--- a/FrontEnd/Settings.html
+++ b/FrontEnd/Settings.html
@@ -147,10 +147,28 @@
           </div>
         </div>
         <div class="area">
-          <h3 class="usernamelabel">Emergency contact</h3>
+          <h3 class="usernamelabel">Emergency contact 1</h3>
           <input
             class="textinput"
-            name="emergencyContactVar"
+            name="emergencyContactVar1"
+            placeholder="+44 1234567890"
+            type="tel"
+          />
+        </div>
+        <div class="area">
+          <h3 class="usernamelabel">Emergency contact 2</h3>
+          <input
+            class="textinput"
+            name="emergencyContactVar2"
+            placeholder="+44 1234567890"
+            type="tel"
+          />
+        </div>
+        <div class="area">
+          <h3 class="usernamelabel">Emergency contact 3</h3>
+          <input
+            class="textinput"
+            name="emergencyContactVar3"
             placeholder="+44 1234567890"
             type="tel"
           />
