Formatted symptoms section clearer

--- a/FrontEnd/AddCrisis.html
+++ b/FrontEnd/AddCrisis.html
@@ -38,56 +38,60 @@
           />
         </div>
       </section>
+
+      <!-- Symptoms Setup -->
       <section class="crisistime">
         <h1 class="header9">Input symptoms</h1>
         <section class="framebtns" id="symptomsSection">
+
           <button class="sneeze-parent" id="wheezingBtn">
             <img class="torso-icon" alt="" src="./public/sneeze1@2x.png" />
-
             <div class="wheezing">Wheezing</div>
           </button>
+          
           <button class="sneeze-parent" id="coughBtn">
             <img class="torso-icon" alt="" src="./public/sneeze2@2x.png" />
-
             <div class="wheezing">Cough</div>
           </button>
+
           <button class="torso-parent" id="chestCompressinsBtn">
             <img class="torso-icon" alt="" src="./public/torso@2x.png" />
-
             <div class="chest-compressions">
               <p class="chest">Chest</p>
               <p class="chest">compressions</p>
             </div>
           </button>
+
           <button class="lungs-parent" id="DysponeaBtn">
             <img class="torso-icon" alt="" src="./public/lungs@2x.png" />
-
             <div class="dysponea">Dysponea</div>
           </button>
+
         </section>
         <section class="framebtns" id="symptomsSection">
           <button class="sneeze-parent" id="stressBtn">
             <img class="torso-icon" alt="" src="./public/sad-face@2x.png" />
-
             <div class="wheezing">Stress</div>
           </button>
+
           <button class="sneeze-parent" id="feverBtn">
             <img class="torso-icon" alt="" src="./public/thermometer@2x.png" />
-
             <div class="wheezing">Fever</div>
           </button>
+
           <button class="torso-parent" id="tingleBtn">
             <img class="torso-icon" alt="" src="./public/stomach-pain@2x.png" />
-
             <div class="chest-compressions">Tingle</div>
           </button>
+
           <button class="lungs-parent" id="dizzinessBtn">
             <img class="torso-icon" alt="" src="./public/dizzy-person@2x.png" />
-
             <div class="dysponea">Dizziness</div>
           </button>
         </section>
       </section>
+
+
       <section class="crisistime">
         <h1 class="header9">Input allergen cause</h1>
         <section class="framebtns" id="symptomsSection">
@@ -226,7 +230,7 @@
         </section>
       </section>
       <div class="addcrisisbtn" id="popupaddCrisisBtnContainer">
-        <b class="more-detailoptional">Sign In</b>
+        <b class="more-detailoptional">Add Crisis</b>
       </div>
     </div>
 
