--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -67,6 +67,7 @@
 
                   <input
                     class="loremus-ipsumus-d"
+                    id = "emailInput"
                     name="emailAdress"
                     placeholder="example@email.com"
                     type="email"
@@ -93,6 +94,7 @@
 
                   <input
                     class="loremus-ipsumus-d1"
+                    id = "passwordInput"
                     name="passwordLog"
                     placeholder="********"
                     type="password"
@@ -143,27 +145,7 @@
       </main>
     </div>
 
-    <script>
-      var buttonPrimary = document.getElementById("signInBtn");
-      if (buttonPrimary) {
-        buttonPrimary.addEventListener("click", function (e) {
-          window.location.href = "./Home.html";
-        });
-      }
-      
-      var textContainer2 = document.getElementById("textContainer2");
-      if (textContainer2) {
-        textContainer2.addEventListener("click", function (e) {
-          window.location.href = "./ForgotPassword.html";
-        });
-      }
-      
-      var textContainer3 = document.getElementById("textContainer3");
-      if (textContainer3) {
-        textContainer3.addEventListener("click", function (e) {
-          window.location.href = "./SignUp.html";
-        });
-      }
-      </script>
+
+      <script src="index.js" type="module"></script>
   </body>
 </html>
