--- a/FrontEnd/AirQuality2.html
+++ b/FrontEnd/AirQuality2.html
@@ -280,7 +280,7 @@
       var topNav = document.getElementById("backBtn");
       if (topNav) {
         topNav.addEventListener("click", function (e) {
-          window.location.href = "./AirQuality01.html";
+          window.location.href = "./Home.html";
         });
       }
       
