--- a/FrontEnd/AddInhalerPopup.html
+++ b/FrontEnd/AddInhalerPopup.html
@@ -41,16 +41,18 @@
           <input
             class="text-input3"
             name="inhalerNameVar"
+            id = "newInhalerName"
             placeholder="Name"
             type="text"
           />
         </div>
         <div class="inhalername">
-          <h3 class="inhaler-name">Number of Doses:</h3>
+          <h3 class="inhaler-volume">Volume:</h3>
           <input
             class="text-input3"
-            name="nbDosesInhalerVar"
-            placeholder="Total doses"
+            name="inhalerVolumeVar"
+            id = "newInhalerVolume"
+            placeholder="Volume of Inhaler - see packaging"
             type="number"
           />
         </div>
@@ -62,7 +64,8 @@
           <input
             class="expirydate-child"
             name="expiryDateVar"
-            placeholder="date"
+            id = "newInhalerExpDate"
+            placeholder="Expiry Date - see packaging"
             type="date"
           />
         </div>
