embed youtube video emergency 2 html

--- a/FrontEnd/Emergency2.html
+++ b/FrontEnd/Emergency2.html
@@ -133,13 +133,15 @@
 
             <h1 class="emergency-steps">Video</h1>
           </header>
-          <a
-            class="httpswwwyoutubecomwatch"
-            href="https://www.youtube.com/watch?v=pt53nH_dX1Y&t=1s"
-            target="_blank"
-            >https://www.youtube.com/watch?v=pt53nH_dX1Y&t=1s</a
-          >
-        </section>
+          <iframe
+          width="560" 
+          height="315" 
+          src="https://www.youtube.com/embed/pt53nH_dX1Y?si=DS-f5ByXL5vtnKsw" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen>
+         </iframe>        </section>
       </main>
       <nav class="navbaremergency1" id="navBarEmergency">
         <button class="home5" id="homeBtn">
