--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -116,7 +116,8 @@
       </main>
     </div>
 
-    <script>
+    <script
+            type = 'module'>
       var buttonPrimary = document.getElementById("signInBtn");
       if (buttonPrimary) {
         buttonPrimary.addEventListener("click", function (e) {
@@ -136,6 +137,10 @@
         textContainer3.addEventListener("click", function (e) {
           window.location.href = "./SignUp.html";
         });
+      }
+      //reference: https://css-tricks.com/creating-scheduled-push-notifications/
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register(new URL('service-worker.js', import.meta.url));
       }
       </script>
   </body>
