Adding js files

--- a/FrontEnd/AddCrisis.html
+++ b/FrontEnd/AddCrisis.html
@@ -234,48 +234,6 @@
       </div>
     </div>
 
-    <script>
-      var popupclose = document.getElementById("close");
-      if (popupclose) {
-        popupclose.addEventListener("click", function (e) {
-          var popup = e.currentTarget.parentNode;
-          function isOverlay(node) {
-            return !!(
-              node &&
-              node.classList &&
-              node.classList.contains("popup-overlay")
-            );
-          }
-          while (popup && !isOverlay(popup)) {
-            popup = popup.parentNode;
-          }
-          if (isOverlay(popup)) {
-            popup.style.display = "none";
-          }
-        });
-      }
-      
-      var popupaddCrisisBtnContainer = document.getElementById(
-        "popupaddCrisisBtnContainer"
-      );
-      if (popupaddCrisisBtnContainer) {
-        popupaddCrisisBtnContainer.addEventListener("click", function (e) {
-          var popup = e.currentTarget.parentNode;
-          function isOverlay(node) {
-            return !!(
-              node &&
-              node.classList &&
-              node.classList.contains("popup-overlay")
-            );
-          }
-          while (popup && !isOverlay(popup)) {
-            popup = popup.parentNode;
-          }
-          if (isOverlay(popup)) {
-            popup.style.display = "none";
-          }
-        });
-      }
-      </script>
+    <script src="./AddCrisis.js" type="module"></script>
   </body>
 </html>
