--- a/FrontEnd/AddInhalerPopup.html
+++ b/FrontEnd/AddInhalerPopup.html
@@ -119,46 +119,6 @@
       </button>
     </div>
 
-    <script>
-      var popupclose = document.getElementById("closeBtn");
-      if (popupclose) {
-        popupclose.addEventListener("click", function (e) {
-          var popup = e.currentTarget.parentNode;
-          function isOverlay(node) {
-            return !!(
-              node &&
-              node.classList &&
-              node.classList.contains("popup-overlay")
-            );
-          }
-          while (popup && !isOverlay(popup)) {
-            popup = popup.parentNode;
-          }
-          if (isOverlay(popup)) {
-            popup.style.display = "none";
-          }
-        });
-      }
-      
-      var popupbuttonPrimary = document.getElementById("applyBtn");
-      if (popupbuttonPrimary) {
-        popupbuttonPrimary.addEventListener("click", function (e) {
-          var popup = e.currentTarget.parentNode;
-          function isOverlay(node) {
-            return !!(
-              node &&
-              node.classList &&
-              node.classList.contains("popup-overlay")
-            );
-          }
-          while (popup && !isOverlay(popup)) {
-            popup = popup.parentNode;
-          }
-          if (isOverlay(popup)) {
-            popup.style.display = "none";
-          }
-        });
-      }
-      </script>
+    <script src="./AddInhalerPopup.js" type="module"></script>
   </body>
 </html>
