--- a/FrontEnd/AddIntakePopup.html
+++ b/FrontEnd/AddIntakePopup.html
@@ -72,46 +72,6 @@
       </button>
     </div>
 
-    <script>
-      var popupclose = document.getElementById("closeBtn");
-      if (popupclose) {
-        popupclose.addEventListener("click", function (e) {
-          var popup = e.currentTarget.parentNode;
-          function isOverlay(node) {
-            return !!(
-              node &&
-              node.classList &&
-              node.classList.contains("popup-overlay")
-            );
-          }
-          while (popup && !isOverlay(popup)) {
-            popup = popup.parentNode;
-          }
-          if (isOverlay(popup)) {
-            popup.style.display = "none";
-          }
-        });
-      }
-      
-      var popupaddIntakeBtn = document.getElementById("addIntakeBtn");
-      if (popupaddIntakeBtn) {
-        popupaddIntakeBtn.addEventListener("click", function (e) {
-          var popup = e.currentTarget.parentNode;
-          function isOverlay(node) {
-            return !!(
-              node &&
-              node.classList &&
-              node.classList.contains("popup-overlay")
-            );
-          }
-          while (popup && !isOverlay(popup)) {
-            popup = popup.parentNode;
-          }
-          if (isOverlay(popup)) {
-            popup.style.display = "none";
-          }
-        });
-      }
-      </script>
+    <script src="./AddIntakePopup.js" type = "module"></script>
   </body>
 </html>
