--- a/FrontEnd/ForgotPassword.html
+++ b/FrontEnd/ForgotPassword.html
@@ -79,27 +79,6 @@
       </main>
     </div>
 
-    <script>
-      var buttonPrimaryContainer = document.getElementById("buttonPrimaryContainer");
-      if (buttonPrimaryContainer) {
-        buttonPrimaryContainer.addEventListener("click", function (e) {
-          window.location.href = "./ForgotPassword2.html";
-        });
-      }
-      
-      var buttonPrimary = document.getElementById("ResetPswdBtn");
-      if (buttonPrimary) {
-        buttonPrimary.addEventListener("click", function (e) {
-          window.location.href = "./ForgotPassword2.html";
-        });
-      }
-      
-      var textContainer1 = document.getElementById("textContainer1");
-      if (textContainer1) {
-        textContainer1.addEventListener("click", function (e) {
-          window.location.href = "./SignUp.html";
-        });
-      }
-      </script>
+    <script src="./ForgotPassword.js" type="module"></script>
   </body>
 </html>
