--- a/FrontEnd/ForgotPassword2.html
+++ b/FrontEnd/ForgotPassword2.html
@@ -91,20 +91,6 @@
       </main>
     </div>
 
-    <script>
-      var buttonPrimaryContainer = document.getElementById("buttonPrimaryContainer");
-      if (buttonPrimaryContainer) {
-        buttonPrimaryContainer.addEventListener("click", function (e) {
-          window.location.href = "./index.html";
-        });
-      }
-      
-      var buttonPrimary = document.getElementById("ApplyBtn");
-      if (buttonPrimary) {
-        buttonPrimary.addEventListener("click", function (e) {
-          window.location.href = "./index.html";
-        });
-      }
-      </script>
+    <script src="./ForgotPassword2.js" type="module"></script>
   </body>
 </html>
