--- a/FrontEnd/Loading.html
+++ b/FrontEnd/Loading.html
@@ -53,20 +53,6 @@
       </main>
     </div>
 
-    <script>
-      var logoFull = document.getElementById("MainLoading");
-      if (logoFull) {
-        logoFull.addEventListener("click", function (e) {
-          window.location.href = "./SignIn.html";
-        });
-      }
-      
-      var loadingContainer = document.getElementById("loadingContainer");
-      if (loadingContainer) {
-        loadingContainer.addEventListener("click", function (e) {
-          window.location.href = "./SignIn.html";
-        });
-      }
-      </script>
+    <script src="./Loading.js" type="module"></script>
   </body>
 </html>
