--- a/FrontEnd/QuickIntakePopup.html
+++ b/FrontEnd/QuickIntakePopup.html
@@ -50,48 +50,6 @@
       />
     </div>
 
-    <script>
-      var popupclose = document.getElementById("closeBtn");
-      if (popupclose) {
-        popupclose.addEventListener("click", function (e) {
-          var popup = e.currentTarget.parentNode;
-          function isOverlay(node) {
-            return !!(
-              node &&
-              node.classList &&
-              node.classList.contains("popup-overlay")
-            );
-          }
-          while (popup && !isOverlay(popup)) {
-            popup = popup.parentNode;
-          }
-          if (isOverlay(popup)) {
-            popup.style.display = "none";
-          }
-        });
-      }
-      
-      var popupcancelBtnContainer = document.getElementById(
-        "popupcancelBtnContainer"
-      );
-      if (popupcancelBtnContainer) {
-        popupcancelBtnContainer.addEventListener("click", function (e) {
-          var popup = e.currentTarget.parentNode;
-          function isOverlay(node) {
-            return !!(
-              node &&
-              node.classList &&
-              node.classList.contains("popup-overlay")
-            );
-          }
-          while (popup && !isOverlay(popup)) {
-            popup = popup.parentNode;
-          }
-          if (isOverlay(popup)) {
-            popup.style.display = "none";
-          }
-        });
-      }
-      </script>
+    <script src="./QuickIntakePopup.js" type="module"></script>
   </body>
 </html>
