--- a/FrontEnd/Settings.html
+++ b/FrontEnd/Settings.html
@@ -194,13 +194,6 @@
       </main>
     </div>
 
-    <script>
-      var signOutLink = document.getElementById("signOutLink");
-      if (signOutLink) {
-        signOutLink.addEventListener("click", function (e) {
-          window.location.href = "./index.html";
-        });
-      }
-      </script>
+    <script src="./Settings.js" type="module"></script>
   </body>
 </html>
