fixed the map again

--- a/FrontEnd/AirQuality01.html
+++ b/FrontEnd/AirQuality01.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="AirQuality01.js"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1, width=device-width" />
 
@@ -43,11 +44,7 @@
       </button>
     </nav>
     <section class="locationprofile" id="locationProfile">
-      <h1 class="areavar" id="areaVar">South Kensington</h1>
-      <section class="aqi-widget" id="AQIWidget">
-        <h2 class="aqi">AQI</h2>
-        <b id="aqiindex" class="b">9/10</b>
-      </section>
+      <h1 class="areavar" id="areaVar">London</h1>
       <section class="pollutionsection" id="pollutionSection">
         <h2 class="aqi">Pollution</h2>
         <img
@@ -65,19 +62,19 @@
         </section>
         <section class="percentages" id="percentages">
           <div class="heading-wrapper">
-            <div id="NO2" class="heading">7/10</div>
+            <div id="NO2" class="heading">-/10</div>
           </div>
           <div class="heading-wrapper">
-            <div id="SO2" class="heading">6/10</div>
+            <div id="SO2" class="heading">-/10</div>
           </div>
           <div class="heading-wrapper">
-            <div id="O3" class="heading">2/10</div>
+            <div id="O3" class="heading">-/10</div>
           </div>
           <div class="heading-wrapper">
-            <div id="PM10" class="heading">2/10</div>
+            <div id="PM10" class="heading">-/10</div>
           </div>
           <div class="heading-wrapper">
-            <div id="PM25" class="heading">2/10</div>
+            <div id="PM25" class="heading">-/10</div>
           </div>
         </section>
       </section>
@@ -90,7 +87,7 @@
         />
 
         <section class="insightswidget" id="insightsWidget">
-          <i class="notif" id="notif">-Sudden drop in Hammersmith</i>
+          <i class="notif" id="notif"></i>
         </section>
       </section>
       <section class="pollutionsection" id="mapsSection">
@@ -137,9 +134,7 @@
 </div>
 
 <script>
-  function getlocation(){
 
-  }
   var close = document.getElementById("closeBtn");
   if (close) {
     close.addEventListener("click", function (e) {
