--- a/FrontEnd/changelocation.html
+++ b/FrontEnd/changelocation.html
@@ -35,7 +35,41 @@
       <h1 class="areavar" id="areaVar">Change Location</h1>
       <div class="text-input">
         <div class="text">
-          <input type="text" id="postcode" placeholder="Enter Postcode" class="loremus-ipsumus-d"/>
+          <select type="text" id="areaname" class="loremus-ipsumus-d">
+            <option value="Barking">Barking</option>
+            <option value="Barnet">Barnet</option>
+            <option value="Bexley">Bexley</option>
+            <option value="Brent">Brent</option>
+            <option value="Bromley">Bromley</option>
+            <option value="Camden">Camden</option>
+            <option value="City of London">City of London</option>
+            <option value="Croydon">Croydon</option>
+            <option value="Ealing">Ealing</option>
+            <option value="Enfield">Enfield</option>
+            <option value="Greenwich">Greenwich</option>
+            <option value="Hackney">Hackney</option>
+            <option value="Hammersmith">Hammersmith</option>
+            <option value="Haringey">Haringey</option>
+            <option value="Harrow">Harrow</option>
+            <option value="Havering">Havering</option>
+            <option value="Hillingdon">Hillingdon</option>
+            <option value="Hounslow">Hounslow</option>
+            <option value="Islington">Islington</option>
+            <option value="Kensington and Chelsea">Kensington & Chelsea</option>
+            <option value="Kingston">Kingston</option>
+            <option value="Lambeth">Lambeth</option>
+            <option value="Lewisham">Lewisham</option>
+            <option value="Merton">Merton</option>
+            <option value="Newham">Newham</option>
+            <option value="Redbridge">Redbridge</option>
+            <option value="Richmond">Richmond</option>
+            <option value="Southwark">Southwark</option>
+            <option value="Sutton">Sutton</option>
+            <option value="Tower Hamlets">Tower Hamlets</option>
+            <option value="Waltham Forest">Waltham Forest</option>
+            <option value="Wandsworth">Wandsworth</option>
+            <option value="Westminster">Westminster</option>
+          </select>
         </div>
       </div>
       <button class="changelocationbtn" id="changeLocationBtn">
@@ -91,9 +125,8 @@
   var changelocation = document.getElementById("changeLocationBtn");
   if (changelocation) {
     changelocation.addEventListener("click", function (e) {
-      var postcode = document.getElementById("postcode").value;
-      console.log(postcode);
-      localStorage.setItem('postcode', postcode);
+      var areaname = document.getElementById("areaname").value;
+      localStorage.setItem('areaname', areaname);
       window.location.href = "./AirQuality01.html";
     });
   }
