added notification action when inhaler & dose is added

--- a/FrontEnd/AddInhaler.html
+++ b/FrontEnd/AddInhaler.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
@@ -178,4 +178,5 @@
       </div>
     </div>
   </body>
+<script src="./AddInhaler.js" type="module"></script>
 </html>
