--- a/FrontEnd/AddInhalerPopup.html
+++ b/FrontEnd/AddInhalerPopup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <title>Add Inhaler Popup</title>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
@@ -37,14 +38,14 @@
       <section class="inputinhalernamesection" id="inputInhalerNameSection">
         <h1 class="header20">Input Inhaler Name</h1>
         <div class="inhalername">
-          <h3 class="inhaler-name">Inhaler Name:</h3>
+          <label class="inhaler-name">Inhaler Name:</label>
           <input
             class="text-input3"
             name="inhalerNameVar"
             id = "newInhalerName"
             placeholder="Name"
             type="text"
-          />
+          >
         </div>
         <div class="inhalername">
           <h3 class="inhaler-volume">Volume:</h3>
@@ -108,6 +109,7 @@
             class="text-input5"
             name="reminderTimeVar"
             placeholder="Time"
+            id ="newDose"
             type="datetime-local"
           />
         </ul>
@@ -119,6 +121,7 @@
       </button>
     </div>
 
-    <script src="./AddInhalerPopup.js" type="module"></script>
+    <script src="./AddInhalerPopup.js" type="module">
+    </script>
   </body>
 </html>
