--- a/FrontEnd/AddIntakePopup.html
+++ b/FrontEnd/AddIntakePopup.html
@@ -56,13 +56,7 @@
       </section>
       <section class="inputtimeintakesecion" id="selectInhalerSection">
         <b class="add-intake">Select Inhaler</b>
-        <section class="btnssection" id="symptomsSection">
-          <button class="inhaler11" id="inhaler1Btn">
-            <div class="inhaler12">Inhaler1</div>
-          </button>
-          <button class="inhaler11" id="inhaler2Btn">
-            <div class="inhaler12">Inhaler2</div>
-          </button>
+        <section class="btnssection" id="pickInhaler">
         </section>
       </section>
       <button class="addintakebtn" id="addIntakeBtn">
@@ -72,6 +66,8 @@
       </button>
     </div>
 
-    <script src="./AddIntakePopup.js" type = "module"></script>
+    <script src="./AddIntakePopup.js" type = "module">
+      
+    </script>
   </body>
 </html>
