edited editcont, settings, addcrisis

--- a/FrontEnd/AddCrisis.html
+++ b/FrontEnd/AddCrisis.html
@@ -44,6 +44,7 @@
         <h1 class="header9">Input symptoms</h1>
         <section class="framebtns" id="symptomsSection">
 
+          <!-- add the buttons -->
           <button class="sneeze-parent" id="wheezingBtn">
             <img class="torso-icon" alt="" src="./public/sneeze1@2x.png" />
             <div class="wheezing">Wheezing</div>
