added overusage notification

--- a/FrontEnd/QuickIntake.html
+++ b/FrontEnd/QuickIntake.html
@@ -18,7 +18,7 @@
     <div class="quick-intake1">
       <main class="frame7" id="mainQuickIntake">
         <fieldset class="add-intake1">
-          <header class="inhaler-parent" id="headerQuickIntake">
+          <header class="inhaler-parent" id="headerQuickIntake1">
             <img
               class="inhaler-icon16"
               alt=""
@@ -52,7 +52,7 @@
           />
         </fieldset>
       </main>
-      <header class="frame8" id="headerQuickIntake">
+      <header class="frame8" id="headerQuickIntake2">
         <div class="frame-inner1">
           <div class="asthmapp-logo-light-1-group">
             <img
