--- a/FrontEnd/Settings.html
+++ b/FrontEnd/Settings.html
@@ -199,7 +199,7 @@
         </section>
       </main>
     </div>
-
+<!-- check -->
     <script>
       var signOutLink = document.getElementById("signOutLink");
       if (signOutLink) {
@@ -208,6 +208,6 @@
         });
       }
       </script>
- 
+ <!-- check -->
   </body>
 </html>
