--- a/FrontEnd/QuickIntake.html
+++ b/FrontEnd/QuickIntake.html
@@ -35,7 +35,7 @@
           <section class="statistics-parent3">
             <h1 class="add-intake2">You added an intake</h1>
             <div class="selector-inhaler">
-              <i class="name8" id="favInhalerVar">Favorite Inhaler</i>
+              Favorite Inhaler:<i id="favInhalerName"></i>
             </div>
           </section>
           <button class="button-primary11" id="cancelBtn">
@@ -97,4 +97,6 @@
       </div>
     </div>
   </body>
+<script src="./QuickIntake.js" type="module">
+</script>
 </html>
