integrated function to inhaler widget at Home

--- a/FrontEnd/Home.html
+++ b/FrontEnd/Home.html
@@ -74,13 +74,13 @@
             <div class="nextintake">
               <h3 class="my-next-intake">My next intake:</h3>
               <div class="reminderframe">
-                <p class="nextremindervar" id="nextReminderVar">5:00 PM</p>
+                <p class="nextremindervar" id="nextReminderVar"></p>
               </div>
             </div>
             <div class="nextintake">
               <h3 class="my-next-intake">Expires in:</h3>
               <div class="expiryframe">
-                <p class="nextremindervar" id="expiryDateFavVar">2 hours</p>
+                <p class="nextremindervar" id="expiryDateFavVar"></p>
               </div>
             </div>
           </section>
