--- a/FrontEnd/AddInhaler.html
+++ b/FrontEnd/AddInhaler.html
@@ -18,7 +18,7 @@
     <div class="add-inhaler">
       <main class="frame11" id="mainEditIntake">
         <fieldset class="add-inhaler1">
-          <header class="inhaler-container" id="headerEditInhaler">
+          <header class="inhaler-container" id="headerEditInhaler1">
             <img
               class="inhaler-icon20"
               alt=""
@@ -133,7 +133,7 @@
           </div>
         </fieldset>
       </main>
-      <header class="frame12" id="headerEditInhaler">
+      <header class="frame12" id="headerEditInhaler2">
         <div class="iphone-x-or-newer10">
           <img class="text-icon10" alt="" src="./public/text@2x.png" />
 
