--- a/FrontEnd/AddIntakePopup.html
+++ b/FrontEnd/AddIntakePopup.html
@@ -37,6 +37,7 @@
           <input
             class="intaketimevar"
             name="intakeTimeVar"
+            id="intakeTimeVar"
             placeholder="Time Of Intake"
             type="datetime-local"
           />
@@ -49,6 +50,7 @@
           <input
             class="intaketimevar"
             name="nbPuffsVar"
+            id="nbPuffsVar"
             placeholder="Number Of Puffs"
             type="number"
           />
