matched elements into functions

--- a/FrontEnd/QuickIntakePopup.html
+++ b/FrontEnd/QuickIntakePopup.html
@@ -36,7 +36,7 @@
 
       <section class="maininhalerintake">
         <h1 class="quick-intake">You added an intake</h1>
-        <i class="favinhalervar" id="favInhalerVar">Favorite Inhaler</i>
+        <i class="favinhalervar" id="favInhalerVar"></i>
       </section>
       <div class="cancelbtn" id="popupcancelBtnContainer">
         <div class="content14">
