fixed intake constructor to match

--- a/FrontEnd/MyInhaler.html
+++ b/FrontEnd/MyInhaler.html
@@ -44,7 +44,7 @@
           function displayInhalerInfo(inhaler) {
             let inhalerType = document.createElement('h1');
             inhalerType.className = "reminders"
-            inhalerType.textContent = inhaler.getName();
+            inhalerType.textContent = inhaler.getType();
             let inhalerField = document.createElement('ul')
             inhalerField.className = "inhalerfield"
 
